apps/dev/ingress-dev.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: petclinic-ingress-dev
  namespace: petclinic-dev
  labels:
    name: petclinic-ingress-dev
  annotations:
    kubernetes.io/ingress.class: nginx      # hoặc ingressClassName: nginx
spec:
  ingressClassName: nginx
  rules:
    - host: petclinic-dev.csc11007.com
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8080
